--- a/pages/detail/gifdetail.wxml
+++ b/pages/detail/gifdetail.wxml
@@ -1,64 +1,101 @@
 <!--pages/detail/gifdetail.wxml-->
-<view class="titlebar">
-  <text class='titlebar-left iconfont icon-xitongcaidan'></text>
-  <text class='titlebar-center'>首页</text>
-  <text class='titlebar-right iconfont icon-sousuo'></text>
-</view>
-<scroll-view class="mui-scroll">
-  <view id="list" class="mui-content-padded">
-    <view class="artTitle">{{article.articleTitle}}</view>
-    <view class="mui-row undertitle">
-      <view class="mui-col-xs-4 mui-col-sm-4">
-        分类:
-        <navigator url="../../pages/list/gifmain" redirect>{{article.typeName}}</navigator> 
+<view class="page">
+  <view class="page-bottom">
+    <view class="page-content">
+      <view class="off-title">
+        <text >轻松一下</text>
       </view>
-      <view class="mui-col-xs-4 mui-col-sm-4">
-        阅读:{{article.readTime}}
+      <view class="off-home">
+        <navigator url="../../pages/html/home" class='iconfont icon-shouye' redirect>首页</navigator>
       </view>
-      <view class="mui-col-xs-4 mui-col-sm-4">
-        赞:{{article.niceNum}}
+      <view class="wc">
+        <navigator url="../../pages/list/videomain" class='iconfont icon-ziranfengguang' redirect>视频</navigator>
+      </view>
+      <view class="wc">
+        <navigator url="../../pages/list/gifmain" class='iconfont icon-shizhong' redirect>动图</navigator>
+      </view>
+       <view class="wc">
+        <navigator url="../../pages/list/ztmain" class='iconfont icon-tupian' redirect>组图</navigator>
+      </view>
+       <view class="wc">
+        <navigator url="../../pages/list/welfare" class='iconfont icon-zenyaowan' redirect>福利</navigator>
+      </view>
+       <view class="off-us">
+        <navigator url="../../pages/html/about" class='iconfont icon-zenyaowan' redirect>联系我们</navigator>
+      </view>
+    </view>
+  </view>
+  <view class="page-top {{open ? 'c-state-1' : 'c-state-2'}}">
+    <view class="titlebar">
+      <text class='titlebar-left iconfont icon-xitongcaidan' bindtap='tap_ch'></text>
+      <text class='titlebar-center'>看动图</text>
+      <text class='titlebar-right iconfont icon-sousuo' bindtap='tap_search'></text>
+    </view>
+    <scroll-view class="mui-scroll">
+      <view id="list" class="mui-content">
+        <view class="title-text">{{article.articleTitle}}</view>
+        <view class="mui-row undertitle">
+          <view class="mui-col-xs-4 mui-col-sm-4">
+            <navigator url="../../pages/list/gifmain" redirect> 分类:{{article.typeName}}</navigator>
+          </view>
+          <view class="mui-col-xs-4 mui-col-sm-4">
+            阅读:{{article.readTime}}
+          </view>
+          <view class="mui-col-xs-4 mui-col-sm-4">
+            赞:{{article.niceNum}}
+          </view>
+        </view>
+        <view class="imgview">
+          <image id="imgBox" mode="aspectFit" lazy-load="true" src="{{firstItem.imgId}}"></image>
+        </view>
+        <view id="textBox" class="bottom-title">{{firstItem.text}}</view>
+        <view wx:if="{{!nice}}" class="zanview iconfont icon-xiangqu" bindtap='nice'>赞</view>
+        <view wx:else class="zanedview iconfont icon-xiangqufill" bindtap='nice'>已赞</view>
+        <view class="mui-content-padded indexBox" style="align-content: center;">
+          <ul id="indexNum" class="mui-pagination">
+            <li class="mui-previous">
+              <a id="minus" class="iconfont icon-fanhui" bindtap="refreshImg"></a>
+            </li>
+            <li class="{{item.className}}" wx:for="{{items}}" wx:key="item.articleId">
+              <a class="iconfont" data-index="{{item.tag}}" bindtap="refreshImg">
+                {{index+1}}
+              </a>
+            </li>
+            <li class="mui-next">
+              <a id="add" class="iconfont icon-gengduo" bindtap="refreshImg"></a>
+            </li>
+          </ul>
+        </view>
+      </view>
+
+      <view id="bottomBox" class="mui-bottom">
+        <view class="mui-row">
+          <view id="lastpage" class="mui-col-sm-6 mui-col-xs-6 lastpage" data-item="{{lastArticle}}" bindtap="gotoPage">
+            <p style="color: darkgrey;">上一篇:</p>
+            <p class="mui-ellipsis-2">{{lastArticle.articleTitle}}</p>
+          </view>
+          <view id="nextpage" class="mui-col-sm-6 mui-col-xs-6 nextpage" data-item="{{nextArticle}}" bindtap="gotoPage">
+            <p style="color: darkgrey;">下一篇:</p>
+            <p class="mui-ellipsis-2">{{nextArticle.articleTitle}}</p>
+          </view>
+        </view>
+      </view>
+      <!--PC和WAP自适应版-->
+      <!-- <view id="SOHUCS" v-bind:sid="article.articleId"></view>
+  <wxs charset="utf-8" type="text/javascript" src="https://changyan.sohu.com/upload/changyan.js"></wxs> -->
+    </scroll-view>
+
+    <view class='mask' hidden='{{!open}}' bindtap='tap_ch'></view>
+    <view class="searchBar {{search ? 's-state-1' : 's-state-2'}}">
+      <view class="mui-row searchview">
+        <view class="mui-col-sm-10 mui-col-xs-9">
+          <input class="searchInput mui-ellipsis" auto-focus placeholder="请输入搜索关键词" />
+        </view>
+        <view class="mui-col-sm-2 mui-col-xs-3">
+          <view class="searchBtn button" onclick="searchBtn()">搜索</view>
+        </view>
       </view>
     </view>
 
-    <view class="imgview">
-      <image id="imgBox" src="firstItem.imgId"></image>
-    </view>
-    <view id="textBox" class="textview">{{firstItem.text}}</view>
-    <view id="zanBox" class="zanview">♥赞</view>
-    <view class="mui-content-padded indexBox" style="align-content: center;">
-      <ul id="indexNum" class="mui-pagination">
-        <li class="mui-previous">
-          <a href="#" tap="refreshImg(--indexN)">
-            &laquo;
-          </a>
-        </li>
-        <li v-bind:class="item.className" v-for="(item,index) in items">
-          <a href="#" tap="refreshImg(index)">
-            {{index+1}}
-          </a>
-        </li>
-        <li class="mui-next">
-          <a href="#" tap="refreshImg(++indexN)">
-            &raquo;
-          </a>
-        </li>
-      </ul>
-    </view>
   </view>
- 
-  <view id="bottomBox" class="mui-bottom">
-    <view class="mui-row">
-      <view id="lastpage" class="mui-col-sm-6 mui-col-xs-6 lastpage" tap="gotoPage(lastArticle)">
-        <p style="color: darkgrey;">上一篇:</p>
-        <p class="mui-ellipsis-2">{{lastArticle.articleTitle}}</p>
-      </view>
-      <view id="nextpage" class="mui-col-sm-6 mui-col-xs-6 nextpage" tap="gotoPage(nextArticle)">
-        <p style="color: darkgrey;">下一篇:</p>
-        <p class="mui-ellipsis-2">{{nextArticle.articleTitle}}</p>
-      </view>
-    </view>
-  </view>
-  <!--PC和WAP自适应版-->
-  <!-- <view id="SOHUCS" v-bind:sid="article.articleId"></view>
-  <wxs charset="utf-8" type="text/javascript" src="https://changyan.sohu.com/upload/changyan.js"></wxs> -->
-</scroll-view>
+</view>
