--- a/pages/detail/gifdetail.wxss
+++ b/pages/detail/gifdetail.wxss
@@ -1,3 +1,34 @@
 /* pages/detail/gifdetail.wxss */
 @import "../../utils/iconfont.wxss";
 @import "../../utils/main.wxss";
+
+page {
+  background-color: white;
+}
+
+.mui-content {
+  background-color: white;
+}
+navigator {
+  /* float:left; */
+  color: #007aff;
+}
+
+.imgview {
+  position: relative;
+  width: 96%;
+  padding-bottom: 90%;
+  text-align: center;
+  left: 2%;
+  align-content: center;
+}
+
+.imgview image {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    -webkit-transform: translate(-50%, 0);
+    -moz-transform: translate(-50%, 0);
+    transform: translate( -50%, 0);
+    height: 100%;
+}
