--- a/utils/main.wxss
+++ b/utils/main.wxss
@@ -13,14 +13,14 @@
 }
 
 .typename {
-    position: relative;
-    float: right;
-    color: gray;
-    border: 1px solid gray;
-    padding-left: 5rpx;
-    padding-right: 5rpx;
-    border-radius: 5rpx;
-    font-size: 30rpx;
+  position: relative;
+  float: right;
+  color: gray;
+  border: 1px solid gray;
+  padding-left: 5rpx;
+  padding-right: 5rpx;
+  border-radius: 5rpx;
+  font-size: 30rpx;
 }
 
 .imgview image {
@@ -46,9 +46,15 @@
   float: left;
 }
 
-.article-title-text{
-  padding: 5rpx 5rpx;
+.article-title-text {
+  padding: 15rpx 15rpx;
   font-size: 33rpx;
+}
+
+.title-text {
+  padding: 5rpx 5rpx;
+  font-size: 40rpx;
+  text-align: center;
 }
 
 .row-padding {
@@ -57,6 +63,64 @@
 }
 
 .labelview {
-  padding: 10rpx 5rpx;
+  padding: 10rpx 15rpx;
   font-size: 33rpx;
 }
+
+.bottom-title {
+  padding: 15rpx 15rpx;
+  font-size: 35rpx;
+  text-align: center;
+  justify-content: center;
+}
+
+.undertitle {
+  position: relative;
+  text-align: center;
+  font-size: 35rpx;
+  z-index: 3;
+  padding: 10rpx 0rpx;
+}
+
+.zanview {
+  font-size: 35rpx;
+  position: relative;
+  text-align: center;
+  width: 10%;
+  left: 45%;
+  padding: 5rpx 5rpx;
+  color: red;
+  border: 1px solid red;
+  border-radius: 5px;
+}
+
+.zanedview {
+  font-size: 35rpx;
+  position: relative;
+  text-align: center;
+  width: 18%;
+  left: 41%;
+  padding: 5rpx 5rpx;
+  color: gray;
+  border: 1px solid gray;
+  border-radius: 5px;
+}
+
+.indexBox {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+}
+
+.lastpage {
+  float: left;
+  text-align: left;
+}
+
+.nextpage {
+  float: right;
+  text-align: right;
+}
+
+
