--- a/pages/detail/gifdetail.wxss
+++ b/pages/detail/gifdetail.wxss
@@ -17,15 +17,58 @@ page {
   padding-bottom: 90%;
   text-align: center;
   left: 2%;
+  top: 1%;
   align-content: center;
 }
 
 .imgview image {
     position: absolute;
-    top: 0;
+    top: 50%;
     left: 50%;
-    -webkit-transform: translate(-50%, 0);
-    -moz-transform: translate(-50%, 0);
-    transform: translate( -50%, 0);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    transform: translate( -50%, -50%);
     height: 100%;
+}
+
+
+.page-section {
+  width: 100%;
+}
+
+.page-section_center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.page-section:last-child {
+  margin-bottom: 0;
+}
+
+.page-section-gap {
+  box-sizing: border-box;
+  padding: 0 30rpx;
+}
+
+.page-section-spacing {
+  box-sizing: border-box;
+}
+
+.page-section-title {
+  font-size: 28rpx;
+  color: #999;
+  margin-bottom: 10rpx;
+  padding-left: 30rpx;
+  padding-right: 30rpx;
+}
+
+.page-section-gap .page-section-title {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+swiper {
+  height: 92vw;
+  background-color: rgba(0, 0, 0, .8);
 }
