--- a/pages/detail/videodetail.wxml
+++ b/pages/detail/videodetail.wxml
@@ -1,2 +1,70 @@
 <!--pages/detail/videodetail.wxml-->
-<text>pages/detail/videodetail.wxml</text>
+<view class="page">
+  <!-- 下层侧栏 模板 -->
+  <import src="../../template/offset.wxml" />
+  <template is="offset" data="{{...offset}}" />
+
+  <!-- 上层主页 -->
+  <view class="page-top">
+    <!-- 遮罩蒙版 -->
+    <view class="mask" hidden='{{!open}}' bindtap='tap_ch' catchtouchmove='stopPageScroll'></view>
+    <!-- 搜索栏 -->
+    <view class="searchBar {{search ? 's-state-1' : 's-state-2'}}">
+      <view class="mui-row searchview">
+        <view class="mui-col-sm-10 mui-col-xs-9">
+          <input class="searchInput mui-ellipsis" bindinput="skeyword" placeholder="请输入搜索关键词" />
+        </view>
+        <view class="mui-col-sm-2 mui-col-xs-3">
+          <view class="searchBtn button" bindtap="search">搜索</view>
+        </view>
+      </view>
+    </view>
+    <!-- 标题栏 -->
+    <view class="titlebar">
+      <text class='titlebar-left iconfont icon-xitongcaidan' bindtap='tap_ch'></text>
+      <text class='titlebar-center'>看动图</text>
+      <text class='titlebar-right iconfont icon-sousuo' bindtap='tap_search'></text>
+    </view>
+    <!-- 正文 -->
+    <scroll-view class="mui-scroll">
+      <view id="list" class="mui-content">
+        <view class="title-text">{{article.articleTitle}}</view>
+        <view class="mui-row undertitle">
+          <view class="mui-col-xs-4 mui-col-sm-4">
+            <navigator url="../../pages/list/gifmain" redirect> 分类:{{article.typeName}}</navigator>
+          </view>
+          <view class="mui-col-xs-4 mui-col-sm-4">
+            阅读:{{article.readTime}}
+          </view>
+          <view class="mui-col-xs-4 mui-col-sm-4">
+            赞:{{article.niceNum}}
+          </view>
+        </view>
+        <view class='videoview'>
+          <video src='{{firstItem.imgId}}'></video>
+        </view>
+
+        <view id="textBox" class="bottom-title">{{firstItem.text}}</view>
+        <view wx:if="{{!nice}}" class="zanview iconfont icon-xiangqu" bindtap='nice'>赞</view>
+        <view wx:else class="zanedview iconfont icon-xiangqufill" bindtap='nice'>已赞</view>
+
+
+        <view id="bottomBox" class="mui-bottom">
+          <view class="mui-row">
+            <view id="lastpage" class="mui-col-sm-6 mui-col-xs-6 lastpage" data-item="{{lastArticle}}" bindtap="gotoPage">
+              <p style="color: darkgrey;">上一篇:</p>
+              <p class="mui-ellipsis-2">{{lastArticle.articleTitle}}</p>
+            </view>
+            <view id="nextpage" class="mui-col-sm-6 mui-col-xs-6 nextpage" data-item="{{nextArticle}}" bindtap="gotoPage">
+              <p style="color: darkgrey;">下一篇:</p>
+              <p class="mui-ellipsis-2">{{nextArticle.articleTitle}}</p>
+            </view>
+          </view>
+        </view>
+      </view>
+      <!--PC和WAP自适应版-->
+      <!-- <view id="SOHUCS" v-bind:sid="article.articleId"></view>
+  <wxs charset="utf-8" type="text/javascript" src="https://changyan.sohu.com/upload/changyan.js"></wxs> -->
+    </scroll-view>
+  </view>
+</view>
