--- a/app.wxss
+++ b/app.wxss
@@ -53,7 +53,6 @@ page {
   display: inline;
   height: 100%;
   width: 100%;
-  background-color: white;
 }
 
 .page-bottom {
@@ -145,7 +144,9 @@ page {
   border-bottom-left-radius: 0px;
   border-bottom-right-radius: 5px;
   height: 35px;
+  line-height: 35px;
   font-size: 15px;
+  text-align: center;
   color: white;
 }
 
@@ -378,6 +379,11 @@ a:active {
 .mui-content {
   background-color: #efeff4;
   -webkit-overflow-scrolling: touch;
+}
+.mui-content .mui-table-view{
+  margin-left: 15rpx;
+  margin-right: 15rpx;
+
 }
 
 .mui-bar-nav~.mui-content {
