--- a/utils/main.wxss
+++ b/utils/main.wxss
@@ -47,7 +47,7 @@
 }
 
 .article-title-text {
-  padding: 15rpx 15rpx;
+  padding: 5rpx 15rpx;
   font-size: 33rpx;
 }
 
@@ -82,28 +82,46 @@
   padding: 10rpx 0rpx;
 }
 
-.zanview {
-  font-size: 35rpx;
+.actionview {
   position: relative;
+  display: flex;
+  justify-content:center;
+  width: 100%;
+}
+
+.zanview {
+  font-size: 30rpx;
+  width: auto;
   text-align: center;
-  width: 10%;
-  left: 45%;
-  padding: 5rpx 5rpx;
+  /* padding: 5rpx 15rpx; */
   color: red;
-  border: 1px solid red;
-  border-radius: 5px;
+  /* border: 1px solid red; */
+  /* border-radius: 5px; */
+  /* margin-right: 5rpx; */
+  margin-top: 10rpx;
 }
 
 .zanedview {
-  font-size: 35rpx;
-  position: relative;
+  font-size: 30rpx;
+  width: auto;
   text-align: center;
-  width: 18%;
-  left: 41%;
-  padding: 5rpx 5rpx;
+  /* padding: 5rpx 15rpx; */
   color: gray;
-  border: 1px solid gray;
-  border-radius: 5px;
+  /* border: 1px solid gray; */
+  /* border-radius: 5px; */
+  /* margin-right: 5rpx; */
+  margin-top: 10rpx;
+}
+
+.shareview {
+  font-size: 30rpx;
+  text-align: center;
+  /* padding: 5rpx 5rpx; */
+  color: #24f00c;
+  /* border: 1px solid #24f00c; */
+  /* border-radius: 5px; */
+  /* margin-left: 5rpx; */
+  margin-top: 10rpx;
 }
 
 .indexBox {
@@ -123,4 +141,17 @@
   text-align: right;
 }
 
+.nextpage::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  display: block;
+  width: 1px;
+  background-color: #eee;
+}
 
+.mui-content>.mui-table-view:first-child {
+  margin-top: 1px;
+}
